# decimal64

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: f64.rs  math.rs  mul.rs  mut.rs  parse.rs  rescale.rs
src/: arithemtic.rs  arithmetic.rs  error.rs  lib.rs  macros.rs  math.rs  round.rs  serde.rs
tests/: item.json  serde.rs
